[package]
name = "near_canvas"
version = "0.1.0"
authors = ["Alexey Buiistov <singulart@protonmail.com>"]
edition = "2022"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "*"
near-sdk = "3.1.0"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
bs58 = "0.4"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
